--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 
 .header {
     padding: 15px 0;
-    background-color: aliceblue;
+    background-color: rgb(164, 173, 181);
 }
 
 .header-content {
@@ -13,19 +13,19 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    border: 0px solid green;
+    border: 0px solid rgb(1, 6, 1);
 }
 
 .logo-content {
     display: flex;
     flex-direction: row;
     align-items: center;
-    border: 0px solid green;
+    border: 0px solid rgb(0, 5, 0);
     width: 80%;
 }
 
 .logo-content-img {
-    border: 0px solid #42515f;
+    border: 0px solid #1d374f;
 }
 
 .emp-text {
@@ -38,9 +38,62 @@ body {
 }
 
 .emp-payroll {
-    color: #42515f;
+    color: #202931;
 }
 
 * {
     box-sizing: border-box;
 }
+
+/*UC2*/
+
+.form-content{
+    min-height: calc(100% - 80px);
+    background-color: #e4eeeb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.form {
+    width: 65%;
+    padding: 44px 60px;
+    background: #dbbcbc 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    border: 3px solid #f5f5f5;
+    border-radius: 8px;
+    opacity: 1;
+}
+.form-head {
+    font: normal normal bold 24px/37px Roboto;
+    letter-spacing: 1px;
+    color: #013d76;
+    text-transform: capitalize;
+    opacity: 1;
+    padding-bottom: 20px;
+}
+.row-content {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+    align-items: center;
+}
+ .label {
+    min-width: 140px;
+ }
+ label{
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+ }
+.text{
+    font-size: 16px;
+    color: #003b72;
+    opacity: 1;
+    font-family: Roboto;
+}
+.input{
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+} 
