--- a/css/style.css
+++ b/css/style.css
@@ -102,3 +102,13 @@ body {
     flex-direction: row;
     display: flex;
 }
+select {
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+    font: normal normal normal 16px Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    background-color: transparent;
+}
