--- a/css/style.css
+++ b/css/style.css
@@ -112,3 +112,79 @@ select {
     color: #42515f;
     background-color: transparent;
 }
+.buttonParent {
+    display: flex;
+    margin-bottom: 10px;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+  
+  .button {
+    font-size: 20px;
+    font-family: Roboto;
+    letter-spacing: 0px;
+    color: #374b5e;
+    opacity: 1;
+    background: transparent;
+    border: none;
+    font-weight: 400;
+    min-width: 140px;
+    padding: 7px 7px;
+    border: 1px solid #707070;
+    cursor: pointer;
+  }
+  .submitButton {
+    border: none;
+    background-color: #97dc9c;
+    margin-right: 30px;
+    border: 1px solid blue;
+  }
+  
+  .cancelButton {
+    text-decoration: none;
+    text-align: center;
+    background-color:rgb(221, 178, 166);
+  }
+  .resetButton {
+    text-align: center;
+    background-color: rgb(144, 204, 204);
+  }
+  @media only screen and (max-width: 960px) {
+    .cancelButton {
+      margin-left: 0px;
+    }
+    .form {
+      width: 85%;
+      padding: 44px 20px;
+    }
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .form {
+      margin-top: 10px;
+    }
+    .row {
+      flex-direction: column;
+    }
+    .uploadButton {
+      justify-content: flex-start;
+    }
+    .profile-radio-button {
+      flex-flow: wrap;
+    }
+    .submit-reset {
+      width: 100%;
+      display: flex;
+      flex-grow: 1;
+      flex-direction: row-reverse;
+      justify-content: space-between;
+      margin-bottom: 20px;
+    }
+    .submitButton {
+      margin: 0;
+    }
+    .buttonParent {
+      flex-direction: column-reverse;
+      align-items: flex-start;
+    }
+  }
