--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,12 @@ body {
     border-radius: 4px;
     resize: vertical;
 } 
+error-output{
+    margin: 10px;
+    font-size: 12px;
+    font-style: italic;
+    color:red;
+}
 .profile-radio-content {
     display: flex;
     flex-direction: row;
