--- a/css/Homedtyle.css
+++ b/css/Homedtyle.css
@@ -44,8 +44,6 @@ body {
 .emp-payroll {
     color: #42515f;
 }
-
-/*UC2*/
 .main-content {
     display: flex;
     flex-direction: column;
@@ -109,4 +107,78 @@ body {
 .plus-icon {
     padding-right: 5px;
     padding-left: 2px;
+}
+
+.table-main {
+    width: 80%;
+    margin: 0 auto;
+    overflow: auto;
+}
+
+.table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0 15px;
+    min-width: 800px;
+}
+
+td,
+th {
+    text-align: left;
+    padding: 5px 8px;
+}
+
+.tr {
+    background: #8bb0d4 0% 0% no-repeat padding-box;
+}
+
+.th {
+    background-color: #c7c9cb;
+    background: #809ab3 0% 0% no-repeat padding-box;
+    border-radius: 3px 3px 0px 0px;
+    text-align: left;
+    font: normal normal medium 18px/24px Roboto;
+    letter-spacing: 0px;
+    color: #ffffff;
+    text-transform: uppercase;
+    opacity: 1;
+    border: 0px solid #dddddd;
+}
+
+tr:not(:first-child) {
+    background: #ffffff 0% 0% no-repeat padding-box;
+    border: 1px solid #e3e3e3;
+    border-radius: 3px;
+}
+
+td {
+    font: normal normal normal 17px/21px Roboto;
+    letter-spacing: 0px;
+    color: #000000;
+    opacity: 1;
+}
+
+td:first-child {
+    display: flex;
+    align-items: center;
+}
+
+td img:first-child {
+    margin-right: 10px;
+}
+
+td img {
+    cursor: pointer;
+}
+
+.dept-label {
+    background-color: #e9fea5;
+    border-radius: 40%;
+    width: fit-content;
+    padding: 1px 7px;
+    text-align: center;
+    font-size: 14px;
+    display: inline-block;
+    font-weight: 300;
+    margin-bottom: 8px;
 }
